# ilap-backend-system

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  conversations.py  legal_categories.py  support.py  users.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/integrations/: ai_client.py
app/models/: __init__.py  entities.py
app/schemas/: admin.py  auth.py  common.py  conversations.py  legal_categories.py  support.py  users.py
app/services/: admin.py  audit.py  auth.py  bootstrap.py  categories.py  conversations.py  email_delivery.py  rate_limit.py  support.py
docs/: backend-architecture.md
migrations/: env.py
migrations/versions/: 20260505_000001_initial.py
scripts/: render-start.sh
tests/: test_app.py
