[project]
name = "ilap-backend-system"
version = "1.0.0"
description = "ILAP platform backend"
readme = "docs/backend-architecture.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pwdlib[argon2]>=0.3.0,<1.0.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "PyJWT>=2.12.0,<3.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.18.0,<2.0.0",
    "pytest>=9.0.0,<10.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
